syntax = "proto3";
package profile;

service Profile {
	// updates or inserts a profile. Existing profile will have given fields updated and keep the rest the same.
	// When adding new profile, missing fields uses default values.
	rpc Upsert(ProfileUpsert) returns (ConfigReply);
	// removes profile
	rpc Remove(ProfileRemove) returns (ConfigReply);
	// list profiles
	rpc List(EmptyMsg) returns (ProfileListMap);
}

message EmptyMsg {}

message ProfileUpsert {
	string name = 1;
	optional AspectRatioOptional aspect_ratio = 2;
	optional MinimumSizeOptional minimum_size = 3;
}

message ProfileData {
	AspectRatio aspect_ratio = 1;
	MinimumSize minimum_size = 2;
}

message ProfileListMap {
	map<string, ProfileData> value = 1;
}

message ProfileRemove {
	string name = 1;
}

enum Result {
    ok = 0;
    error = 1;
}

message ConfigReply {
	Result message = 1;
	string error = 2;
}

message AspectRatio {
	bool enable = 1;
	uint32 height = 2;
	uint32 width = 3;
	float range = 4;
}

message MinimumSize {
	bool enable = 1;
	uint32 height = 2;
	uint32 width = 3;
}

message AspectRatioOptional {
	optional bool enable = 1;
	optional uint32 height = 2;
	optional uint32 width = 3;
	optional float range = 4;
}

message MinimumSizeOptional {
	optional bool enable = 1;
	optional uint32 height = 2;
	optional uint32 width = 3;
}